2009-06-19  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: george@async.com.br

	* kiwi/ui/search.py: Update search if entry activates and enable decimal
                         digits for number searching.

2009-06-17 George Y. Kussumoto <george@async.com.br>
	reviewed by: romaia@async.com.br

	* kiwi/ui/views.py: Added enable_window_controls in SlaveView. (#3866:
	Possibilitar a maximização das telas no processo de compras).

2009-06-05  Ronaldo Maia  <romaia@async.com.br>

	* kiwi/ui/search.py: Fix: update callsite after bugfix 3981.

2009-06-01  Ronaldo Maia  <romaia@async.com.br>

	* kiwi/test/test_datatypes.py: Fix sv_SE thousand separators.

=== 1.9.25 ===
2009-04-15 George Y. Kussumoto <george@async.com.br>

	Release 1.9.25

2009-04-14: Severin Heiniger <severinheiniger@gmail.com>
	reviewed by: jdahlin@async.com.br

	* kiwi/dist.py: Do not overwrite custom cmdclass entries.

2009-03-10 George Y. Kussumoto <george@async.com.br>
	reviewed by: romaia@async.com.br

	* kiwi/ui/widgets/combo.py: Added get_selected_data method in
	ProxyComboEntry class, in order to fix some issues with completetion.

2009-02-27 George Y. Kussumoto <george@async.com.br>
	reviewed by: romaia@async.com.br

	* kiwi/ui/search.py: Added SearchFilter get_description method for each
	subclass and an accessor for all search filters in a SearchContainer.

2009-02-19  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: george@async.com.br

	* kiwi/ui/search.py: Refactor advanced search interface to use less space.

2009-02-13  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: george@async.com.br

	* kiwi/db/query.py:
	* kiwi/db/sqlalch.py:
	* kiwi/db/sqlobj.py:
	* kiwi/db/stormintegration.py:
	* kiwi/ui/objectlist.py:
	* kiwi/ui/search.py:
	Add an advanced search, disabled by default

=== 1.9.24 ===
2009-01-27 George Y. Kussumoto <george@async.com.br>

	Release 1.9.24

2009-01-15  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
